--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,13 +1,52 @@
-<form action="/auth/signup" method="POST">
-   <label> Username
-      <input type="text" name="username">
-   </label>
-   <label> Password
-      <input type="password" name="password">
-   </label>
+<div class="py-8 px-6">
+   <div class="w-10/12 ml-8">
+      <h1 class="text-3xl">Signup</h1>
+   </div>
+   <div class="flex flex-wrap">
+      <form class="w-full max-w-lg ml-8" action="/auth/signup" method="POST">
+         <div class="flex flex-wrap mb-6">
+            {{#if errorMessage}}
+            <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+               <span class="block sm:inline">
+                  {{errorMessage}}
+               </span>
+            </div>
+            {{/if}}
+         </div>
+         <div class="flex flex-wrap -mx-3 mb-6">
+            <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+               <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="genre">
+                  Username
+               </label>
+               <input
+                  class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
+                  name="username" type="text" placeholder="username">
 
-   <button type="submit">Submit</button>
-</form>
-
-
-   
+            </div>
+            <div class="w-full md:w-1/2 px-3">
+               <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="">
+                  Password
+               </label>
+               <input
+                  class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                  name="password" type="password" placeholder="password">
+            </div>
+            <div class="w-full md:w-100 px-3">
+               <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="">
+                  Wallet Address
+               </label>
+               <input
+                  class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                  name="wallet_address" type="password" placeholder="wallet_address">
+            </div>
+         </div>
+         <div class="flex flex-wrap mb-6">
+            <button
+               class="bg-green-300 hover:bg-green-400 text-green-800 text-center md:text-left px-4 py-2 rounded mb-2 border-2 border-green-300 mr-2"
+               type="submit">
+               Signup
+            </button>
+         </div>
+      </form>
+   </div>
+</div>
